# nicotine-plus

./: benchmark.py  pyproject.toml
build-aux/windows/: setup.py
pynicotine/: buddies.py  cli.py  config.py  core.py  events.py  logfacility.py  notifications.py  pluginsystem.py  slskproto.py  transfers.py  uploads.py  utils.py
pynicotine/gtkgui/: downloads.py  search.py  userbrowse.py
pynicotine/gtkgui/dialogs/: download.py  preferences.py
pynicotine/gtkgui/widgets/: popupmenu.py
typings/gi/: __init__.pyi  _constants.pyi  _enum.pyi  _error.pyi  _gtktemplate.pyi  _ossighelper.pyi  _propertyhelper.pyi  _signalhelper.pyi  _signature.pyi  docstring.pyi  events.pyi  importer.pyi  module.pyi  types.pyi
typings/gi/overrides/: __init__.pyi
typings/gi/repository/: __init__.pyi
