# SPDX-FileCopyrightText: 2024-2025 Nicotine+ Contributors
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# TODO: remove pyright configuration before merging
[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
reportUnusedCallResult = false
