# SPDX-FileCopyrightText: 2024-2025 Nicotine+ Contributors
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# TODO: remove pyright configuration before merging
[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
reportUnusedCallResult = false
reportExplicitAny = false
enableTypeIgnoreComments = true
reportIgnoreCommentWithoutRule = false
reportImplicitStringConcatenation = false
reportUnnecessaryIsInstance = false

[tool.ruff]
target-version = "py310"
builtins = ["_", "ngettext"]
